Fixed css text alignment

--- a/styles.css
+++ b/styles.css
@@ -219,10 +219,6 @@ input[type="number"] {
 
   border-radius: 10px;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
   box-shadow: 3px 4px 17px 0px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: 3px 4px 17px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 3px 4px 17px 0px rgba(0, 0, 0, 0.75);
@@ -253,6 +249,7 @@ input[type="number"] {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
   gap: 20px;
 
   text-decoration: none;
